Correction contrastes

--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -775,12 +775,16 @@ h4 {
 }
 
 .tc-white {
+    color: #FFFFFF!important;
+}
+
+.tangerine {
     color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -823,6 +827,14 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
+}
+
+.text-shadow {
+    text-shadow: #000 1px 0 2px
+}
+
+.black {
+    color: #000000!important;
 }
 
 @media (max-width: 1024px) {
